@@ -30,6 +30,7 @@ Prevent the canvas from staying blank at startup.
 Fix the reference size grip handling.
 Accelerate startup after opening a file of a foreign format.
 Reactivate the 'Insert series..' action.
+Fix repainting after sheet protection changes.
 Fix the border painting of the column/row headers and the select all button.
 Fix the right mouse button interaction for the column/row headers.
 
